css/custom_queries_layout.css
/* https://responsivedesign.is/develop/browser-feature-support/media-queries-for-common-device-breakpoints/ */

@media only screen {
	ul#thumbnails.gallery li {
		width: 16.4%;
		margin: .5%;
	}
	ul#thumbnails.gallery li.portrait {
		width: 12%;
	}
	ul#thumbnails.gallery {
		padding: .67%;
	}
	ul#thumbnails li a {
		float: none;
	}
	#controls button {
		background-image: url(../assets/buttons_sprite.png);
		background-color: hsla(75, 50%, 40%, .3);
		background-size: 128%;
	}
	
}
@media (hover: hover) {
	#controls {
		opacity: 0;
	}
    
    #controls.static {
		opacity: 1;
	}
}
/*https://css-tricks.com/logic-in-media-queries/*/

@media only screen and (max-width: 600px)/*, (min-width: 769px) and (max-width: 820px) */{

    /*https://stackoverflow.com/questions/21715927/table-row-not-expanding-to-full-width/36606652*/
	#sell.tog table.show {
		position: absolute;
        left: -9999px;
	}
    
    #sell a.show {
        display: none;
    }
    
    #sell.tog a.show, #sell.extent a.show  {
        display: block;
    }
    #sell table.show{
		position: static;
        left: 0px;
	}
    
	sell #sell {
		text-align: center;
	}
	/* if not using flex */
	#sell table {
		width: 100%;
        margin: 0;
	}
    
     ul.loop li a {
        font-size: 1em;
        padding: 1em .5em 1em 2em;
    }
}


@media only screen and (max-width: 767px) {
	.js #alpacas_for_sale #innerwrap {
		margin-bottom: -5%;
	}
	.js #alpacas_for_sale.sell #innerwrap {
		margin-bottom: 5%;
	}
	.js body.sell #innerwrap #main #aside {
		display: none;
	}
	.js #alpacas_for_sale div#aside img {
		margin: 0%;
		float: none;
		animation: enter 1s 1 ease-out;
	}
	#stud_services #main #article p {
		margin-right: 0%;
	}
	#gallery.showtime #header h2 {
		margin: 0%;
	}
	#alpacas_for_sale #footer {
		margin-top: -5%;
	}
	.js #alpacas_for_sale #footer {
		margin-top: 0%;
	}
	.js #about_us #main>#aside {
		width: 100%;
	}
    
    #sell a {
        margin-left: 2%;
    }
    #sell.tog a.show {
        margin: 0;
        display: block;
    }    
    
    #article div#sell figure a {
        margin-left: 0%;
    }
}

/*https://responsivedesign.is/develop/browser-feature-support/media-queries-for-common-device-breakpoints/*/

@media only screen and (min-device-width: 320px) and (max-device-width: 480px) {
	#upkeep #footer {
		margin-top: 0%;
	}
	.js #upkeep p {
		margin-right: 0%;
	}
	#sell table {
		float: none;
		max-width: 100%;
		margin-right: 0%;
	}
	ul#thumbnails.gallery li.portrait {
		width: 12.4%;
	}
	#gallery #thumbnails {
		margin-bottom: 0em;
	}
    
    #controls.static {
		top: -3.3em;
	}
    
    #controls {
        top: 2em;
        border-spacing: .25em;
    }
	#controls button {
		width: 1.5em;
		height: 1.5em;
	}
	
    /* ideally fix the issue of toggling static in javascript in the meantime let playing hold sway*/
    .inplay #gallery {
		top: 1.65em;
        background: blue;
	}
	#gallery.showtime #innerwrap {
		padding-bottom: 2.4em;
	}
	#gallery.showtime #footer {
		margin-top: -3.3em;
	}
	
    #wrap.inplay #footer ul > * {
        opacity: 0;
    }
}
/*
-moz-device-pixel-ratio

Gives the number of device pixels per CSS pixel.

Note: This media feature is also implemented by Webkit as -webkit-device-pixel-ratio. The min and max prefixes as implemented by Gecko are named min--moz-device-pixel-ratio and max--moz-device-pixel-ratio; but the same prefixes as implemented by Webkit are named -webkit-min-device-pixel-ratio and -webkit-max-device-pixel-ratio.
*/

@media only screen and (min-device-width: 320px) and (max-device-width: 480px) and (orientation: portrait) and (-webkit-min-device-pixel-ratio: 1.5)/*, (min-resolution: 192dpi)*/ {
    
    body#alpacas_for_sale ul#list.loop{
        font-size: 0.8em;
    }
    
    figure a {
        box-shadow: none;
    }
    
	ul#thumbnails.gallery li {
		width: 16%;
		margin: 1%;
	}
	ul#thumbnails {
		padding: 1%;
	}
	#article>ul {
		font-size: .9em;
	}
    
    #controls.static {
		top: -2.9em;
	}
    
    #controls {
        top: 1.8em;
    }
    #alpacas_for_sale #tooltip {
	bottom: 23em;
    }
}
/* iPhone 6, 7, 8 ----------- */
/*https://stackoverflow.com/questions/25759046/iphone-6-and-6-plus-media-queries*/

@media screen and (max-device-width: 667px) and (min-device-width: 375px) and (-webkit-min-device-pixel-ratio: 1.5){

	#gallery.showtime #innerwrap {
		padding-bottom: 7em;
	}
	#gallery.showtime #footer {
		margin-top: -7em;
	}
	html.js #alpacas_for_sale.sell #sell a.show, html.js #alpacas_for_sale.sell #sell.tog table.show {
		display: none;
	}
	html.js #alpacas_for_sale.sell #sell.tog a.show, html.js #alpacas_for_sale.sell #sell table.show {
		display: block;
	}
}


@media only screen and (max-width: 768px) {

	#alpacas_for_sale #innerwrap #main>div#aside {
		position: relative;
		width: 100%;
		bottom: 10%;
	}
	#links dt:nth-child(1) {
		-webkit-animation: entry 1s ease-out 1s backwards;
		animation: entry 1s ease-out 1s backwards;
	}
	#links dd:nth-child(2) {
		-webkit-animation: entry 1s ease-out 2s backwards;
		animation: entry 1s ease-out 2s backwards;
	}
	#links dt:nth-child(3) {
		-webkit-animation: entry 1s ease-out 3s backwards;
		animation: entry 1s ease-out 3s backwards;
	}
	#links dd:nth-child(4) {
		-webkit-animation: entry 1s ease-out 4s backwards;
		animation: entry 1s ease-out 4s backwards;
	}
	#links dt:nth-child(5) {
		-webkit-animation: entry 1s ease-out 5s backwards;
		animation: entry 1s ease-out 5s backwards;
	}
	#links dd:nth-child(6) {
		-webkit-animation: entry 1s ease-out 6s backwards;
		animation: entry 1s ease-out 6s backwards;
	}
	#links dt:nth-child(7) {
		-webkit-animation: entry 1s ease-out 7s backwards;
		animation: entry 1s ease-out 7s backwards;
	}
	#links dd:nth-child(8) {
		-webkit-animation: entry 1s ease-out 8s backwards;
		animation: entry 1s ease-out 8s backwards;
	}
}
@media screen and (min-width: 1024px) {
	.touchevents #alpacas_for_sale #article {
		font-size: 90%;
	}
	#alpacas_for_sale.selling #footer {
		margin-top: 2%;
	}
}   
/* iPads (portrait and landscape) ----------- */

@media only screen 
and (min-device-width : 768px) 
and (max-device-width : 1024px) { 
    
	#gallery.showtime #controls {
        font-size: 1.8em;
		z-index: 2;
	}
	.inplay #controls {
		top: 2.8em;
	}
	#controls {
		top: -4em;
	}
	#gallery.showtime #innerwrap {
		padding-bottom: 4.5em;
	}
	#gallery.showtime #footer {
		margin-top: -5em;
		padding-bottom: 3em;
		padding-bottom: 0em;
        background: black;
	}    
}

@media only screen and (max-width: 800px) {
	#about_alpacas #main .read-more-target p:first-child {
		margin-right: 0%;
	}
}
@media only screen and (min-width: 920px) {
	#links #innerwrap #main {
		font-size: 110%;
	}
	#links #innerwrap #copy {
		position: relative;
		z-index: 1;
	}
}
@media only screen and (max-width: 1054px) {
	.verbose #main #article p {
		margin-right: 0%;
	}
}

.touchevents #wrap.inplay #footer ul > * {
        opacity: 0;
    }

